--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start" : "node index.js",
     "dev" : "nodemon index.js",
@@ -13,9 +13,12 @@
   "description": "",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.1",
-    "nodemon": "^3.1.10"
+  }
+  "devDependencies": {
+    "nodemon": "3.1.10"
   }
 }
