--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start" : "node index.js",
     "dev" : "nodemon index.js",
