--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start" : "node app.js",
-    "dev" : "nodemon app.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,6 +19,6 @@
     "mongoose": "^8.19.1"
   },
   "devDependencies": {
-    "nodemon": "3.1.10"
+    "nodemon": "^3.1.10"
   }
 }
