--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "project",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,9 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.1"
-  },
-  "devDependencies": {
+    "mongoose": "^8.19.1",
     "nodemon": "^3.1.10"
   }
 }
